Implement profile management system
Move `ComposeBuilder` and `ProcessStarter` to dedicated packages for better organization. Introduce `ProfileHandler` to manage user-defined Docker Compose profiles, enabling creation, import, export, listing, deletion, and execution. Add `TempComposeFile` for managing temporary compose files.

Refactor `FileUtils` for robust temporary file creation and update `ProcessStarter` to inherit I/O and await process completion. Convert `ProcessStatus` to a record and introduce `ProfileDeleteResult`. Improve `RegistryImport` string representation and add `ProfileException`.